# STHD

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: pre-commit.yml
STHD/: binning.py  binning_fast.py  color_palette.py  config.py  frontline.py  hdpp.py  model.py  patchify.py  qcmask.py  refscrna.py  roi.py  sim.py  sthdio.py  sthdviz.py  train.py  viz.py
notebooks/: format_conversion_stereo.ipynb  parameter_tuning.ipynb  s01_build_ref_scrna.ipynb  s02_STHD_crop_a_patch.ipynb  s03_run_STHD_model_patch.ipynb  s04_STHD_cell_type_guided_binning.ipynb  s11_patchify.ipynb  s12_per_patch_train.ipynb  s13_combine_patch.ipynb  s21_STHDviewer.ipynb  tutorial.ipynb
